로그인화면 로그인탭-프로젝트목록 프로젝트탭-회의방,문서목록,문서목록-문서내용,업무목록 ++++++++++++++++++++++++++++++++++++++++++++++++++++ 로그인탭-친구목록(친구목록 띄우기,액티비티-액티비티-프래그먼트 데이터 전달) 변경사항-탭에서 프래그먼트 변경하는 부분 진행해야 할 사항-php코드, 데이터베이스 쿼리

--- a/app/src/main/res/layout/fragment_project_tab1.xml
+++ b/app/src/main/res/layout/fragment_project_tab1.xml
@@ -51,6 +51,7 @@
         android:textAlignment="center"/>
 
     <Button
+        android:id="@+id/bb"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
