--- a/app/src/main/res/layout/fragment_login_tab1.xml
+++ b/app/src/main/res/layout/fragment_login_tab1.xml
@@ -4,25 +4,33 @@
         android:layout_height="match_parent"
         android:orientation="vertical" >
 
-
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fillViewport="true">
+
+            <android.support.design.widget.CoordinatorLayout
+                xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
                 <ListView
                     android:id="@+id/projectList"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"/>
 
-        </ScrollView>
+                <com.melnykov.fab.FloatingActionButton
+                    android:id="@+id/fab"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="bottom|right"
+                    android:layout_margin="16dp"
+                    android:src="@drawable/add"
+                    android:descendantFocusability="blocksDescendants"/>
 
-        <com.melnykov.fab.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|right"
-        android:layout_margin="16dp"
-        android:src="@drawable/add"/>
+            </android.support.design.widget.CoordinatorLayout>
+
+        </ScrollView>
 
 </LinearLayout>
