--- a/app/src/main/res/layout/fragment_login_tab3.xml
+++ b/app/src/main/res/layout/fragment_login_tab3.xml
@@ -32,7 +32,7 @@
 
         <android.support.design.widget.CoordinatorLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent">
 
 
 
@@ -56,5 +56,6 @@
         </android.support.design.widget.CoordinatorLayout>
 
     </ScrollView>
+
 
 </LinearLayout>
