--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -6,61 +6,52 @@
     android:layout_height="match_parent"
     tools:context="com.example.mijin.hue.RegisterActivity">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar2"
-        android:layout_width="368dp"
+    <Button
+        android:id="@+id/registerButton"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:layout_editor_absoluteY="3dp"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginStart="8dp" />
+        android:text="회원가입"
+        tools:layout_editor_absoluteX="17dp"
+        tools:layout_editor_absoluteY="188dp" />
 
     <EditText
         android:id="@+id/idText"
-        android:layout_width="351dp"
-        android:layout_height="46dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:ems="10"
         android:hint="ID"
-        android:inputType="none|textPersonName"
-        tools:layout_editor_absoluteX="17dp"
-        tools:layout_editor_absoluteY="59dp" />
+        android:inputType="textPersonName"
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="16dp" />
 
     <EditText
         android:id="@+id/passwordText"
-        android:layout_width="351dp"
-        android:layout_height="46dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:ems="10"
         android:hint="password"
         android:inputType="textPassword"
-        tools:layout_editor_absoluteX="17dp"
-        tools:layout_editor_absoluteY="105dp" />
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="59dp" />
 
     <EditText
         android:id="@+id/emailText"
-        android:layout_width="351dp"
-        android:layout_height="46dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:ems="10"
         android:hint="email"
-        android:inputType="textEmailAddress"
-        tools:layout_editor_absoluteX="17dp"
-        tools:layout_editor_absoluteY="151dp" />
+        android:inputType="textPersonName"
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="102dp" />
 
     <EditText
         android:id="@+id/nameText"
-        android:layout_width="351dp"
-        android:layout_height="46dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:ems="10"
         android:hint="name"
         android:inputType="textPersonName"
-        tools:layout_editor_absoluteX="17dp"
-        tools:layout_editor_absoluteY="197dp" />
-
-    <Button
-        android:id="@+id/registerButton"
-        android:layout_width="351dp"
-        android:layout_height="46dp"
-        android:text="회원가입"
-        tools:layout_editor_absoluteX="17dp"
-        tools:layout_editor_absoluteY="243dp" />
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="145dp" />
 
 </android.support.constraint.ConstraintLayout>
