로그인화면 로그인탭-프로젝트목록 프로젝트탭-회의방,문서목록,문서목록-문서내용,업무목록 ++++++++++++++++++++++++++++++++++++++++++++++++++++ 로그인탭-친구목록(친구목록 띄우기,액티비티-액티비티-프래그먼트 데이터 전달) ++++++++++++++++++++++++++++++++++++++++++++++++++++ 로그인탭-프로젝트목록 추가 진행해야 할 사항-php코드, 데이터베이스 쿼리 ++++++++++++++++++++++++++++++++++++++++++++++++++++ 로그인탭-프로젝트 추가, 친구 추가 데이터베이스 연동 진행해야 할 사항-프로젝트 삭제, 수정 버튼 이벤트

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -51,11 +51,12 @@
 
 
        <EditText
+           android:id="@+id/idText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="2"
            android:layout_gravity="center|fill_horizontal"
-           android:inputType="text"/>
+           android:inputType="text" />
 
        <Button
            android:id="@+id/login"
@@ -76,11 +77,12 @@
            android:layout_gravity="center"/>
 
        <EditText
+           android:id="@+id/passwordText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="2"
            android:layout_gravity="center|fill_horizontal"
-           android:inputType="numberPassword"/>
+           android:inputType="numberPassword" />
 
        <GridLayout
            android:layout_width="match_parent"
