--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,117 +4,111 @@
     android:layout_height="match_parent"
     android:rowCount="3"
     android:columnCount="1"
-    android:background="@color/colorBack">
+    android:background="@color/colorWhite">
 
     <GridLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_rowWeight="2"
-        android:rowCount="1"
-        android:columnCount="3"
-        android:layout_gravity="center">
+        android:layout_gravity="center"
+        android:gravity="center">
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/h"/>
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/u"/>
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/e"/>
+            android:layout_width="300dp"
+            android:layout_height="200dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="50dp"
+            android:src="@drawable/logohue" />
 
 
     </GridLayout>
 
-   <GridLayout
-       android:layout_marginTop="30dp"
-       android:layout_width="match_parent"
-       android:layout_height="wrap_content"
-       android:layout_rowWeight="2"
-       android:rowCount="2"
-       android:columnCount="3"
-       android:layout_gravity="center">
+    <GridLayout
+        android:layout_marginTop="30dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_rowWeight="2"
+        android:rowCount="2"
+        android:columnCount="3"
+        android:layout_gravity="center">
 
-       <TextView
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
-           android:text="ID"
-           android:textAlignment="center"
-           android:layout_columnWeight="1"
-           android:layout_gravity="center"/>
-
-
-       <EditText
-           android:id="@+id/idText"
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
-           android:layout_columnWeight="2"
-           android:layout_gravity="center|fill_horizontal"
-           android:inputType="text" />
-
-       <Button
-           android:id="@+id/login"
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
-           android:background="#86DBFD"
-           android:text="Login"
-           android:layout_columnWeight="1"
-           android:layout_rowSpan="2"
-           android:layout_gravity="center"/>
-
-       <TextView
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
-           android:text="PW"
-           android:textAlignment="center"
-           android:layout_columnWeight="1"
-           android:layout_gravity="center"/>
-
-       <EditText
-           android:id="@+id/passwordText"
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
-           android:layout_columnWeight="2"
-           android:layout_gravity="center|fill_horizontal"
-           android:inputType="numberPassword" />
-
-       <GridLayout
-           android:layout_width="match_parent"
-           android:layout_height="wrap_content"
-           android:layout_columnSpan="3"
-           android:rowCount="1"
-           android:columnCount="2"
-           android:layout_gravity="top">
-
-           <TextView
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-               android:text="ID/PW찾기"
-               android:textAlignment="center"
-               android:textColor="@color/colorGray"
-               android:layout_columnWeight="1"
-               android:layout_gravity="top" />
-
-           <TextView
-               android:id="@+id/registerButton"
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-               android:layout_columnWeight="1"
-               android:layout_gravity="top"
-               android:text="회원가입"
-               android:textAlignment="center"
-               android:textColor="@color/colorGray" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="ID"
+            android:textAlignment="center"
+            android:layout_columnWeight="1"
+            android:layout_gravity="center"/>
 
 
-       </GridLayout>
+        <EditText
+            android:id="@+id/idText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_columnWeight="2"
+            android:layout_gravity="center|fill_horizontal"
+            android:inputType="text" />
 
-   </GridLayout>
+        <Button
+            android:id="@+id/login"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@color/colorLogo"
+            android:textColor="@color/colorWhite"
+            android:text="Login"
+            android:layout_columnWeight="1"
+            android:layout_rowSpan="2"
+            android:layout_gravity="center"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="PW"
+            android:textAlignment="center"
+            android:layout_columnWeight="1"
+            android:layout_gravity="center"/>
+
+        <EditText
+            android:id="@+id/passwordText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_columnWeight="2"
+            android:layout_gravity="center|fill_horizontal"
+            android:inputType="numberPassword" />
+
+        <GridLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_columnSpan="3"
+            android:rowCount="1"
+            android:columnCount="2"
+            android:layout_gravity="top">
+
+            <Button
+                android:id="@+id/find"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_columnWeight="1"
+                android:layout_gravity="top"
+                android:text="ID/PASSWORD찾기"
+                android:textAlignment="center"
+                android:textColor="@color/colorGray"
+                android:background="@color/colorWhite"/>
+
+            <Button
+                android:id="@+id/register"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_columnWeight="1"
+                android:layout_gravity="top"
+                android:text="회원가입"
+                android:textAlignment="center"
+                android:textColor="@color/colorGray"
+                android:background="@color/colorWhite"/>
+
+
+        </GridLayout>
+
+    </GridLayout>
 
     <!--
     <GridLayout
@@ -169,7 +163,7 @@
             <View
                 android:layout_width="150dp"
                 android:layout_height="2dp"
-                android:background="@color/colorGray"
+                android:background="@color/colorLogo"
                 android:layout_gravity="center" />
 
 
@@ -181,12 +175,12 @@
                 android:layout_margin="10dp"
                 android:text="OR"
                 android:textAlignment="center"
-                android:textColor="@color/colorGray" />
+                android:textColor="@color/colorLogo" />
 
             <View
                 android:layout_width="150dp"
                 android:layout_height="2dp"
-                android:background="@color/colorGray"
+                android:background="@color/colorLogo"
                 android:layout_gravity="center" />
 
 
@@ -194,16 +188,16 @@
 
 
         <!--<Button-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:background="@color/colorPrimaryDark"-->
-            <!--android:layout_columnWeight="1"-->
-            <!--android:layout_gravity="center"-->
-            <!--android:layout_margin="5dp"-->
-            <!--android:text="Facebook"-->
-            <!--android:textColor="#FFFFFF"-->
-            <!--android:textSize="20dp"-->
-            <!--android:textStyle="bold"/>-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:background="@color/colorPrimaryDark"-->
+        <!--android:layout_columnWeight="1"-->
+        <!--android:layout_gravity="center"-->
+        <!--android:layout_margin="5dp"-->
+        <!--android:text="Facebook"-->
+        <!--android:textColor="#FFFFFF"-->
+        <!--android:textSize="20dp"-->
+        <!--android:textStyle="bold"/>-->
         <com.facebook.login.widget.LoginButton
             android:id="@+id/login_buttonF"
             android:layout_width="wrap_content"
@@ -213,16 +207,16 @@
             android:layout_marginBottom="30dp"/>
 
         <!--<Button-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:background="#FEED0C"-->
-            <!--android:layout_columnWeight="1"-->
-            <!--android:layout_gravity="center"-->
-            <!--android:layout_margin="5dp"-->
-            <!--android:text="KakaoTalk"-->
-            <!--android:textColor="#523003"-->
-            <!--android:textSize="20dp"-->
-            <!--android:textStyle="bold"/>-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:background="#FEED0C"-->
+        <!--android:layout_columnWeight="1"-->
+        <!--android:layout_gravity="center"-->
+        <!--android:layout_margin="5dp"-->
+        <!--android:text="KakaoTalk"-->
+        <!--android:textColor="#523003"-->
+        <!--android:textSize="20dp"-->
+        <!--android:textStyle="bold"/>-->
 
 
     </GridLayout>
