--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,8 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="colorLogo">#57a5c9</color>
+    <color name="colorBack2">#0096d7</color>
     <color name="colorBack">#4FC4F2</color>
     <color name="colorGray">#777C7E</color>
     <color name="colorWhite">#FFFFFF</color>
