--- a/app/src/main/res/layout/fragment_documentdetail_default.xml
+++ b/app/src/main/res/layout/fragment_documentdetail_default.xml
@@ -11,6 +11,7 @@
         android:layout_weight="3">
 
         <TextView
+            android:id="@+id/content"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:maxLines="10"
@@ -18,5 +19,13 @@
 
 
     </ScrollView>
+
+    <Button
+        android:id="@+id/rwbtn"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_gravity="end|right"
+        android:layout_columnWeight="1"
+        android:background="@drawable/rewrite"/>
 
 </LinearLayout>
