--- a/app/src/main/res/layout/activity_projecttab.xml
+++ b/app/src/main/res/layout/activity_projecttab.xml
@@ -13,8 +13,25 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"></android.support.design.widget.TabLayout>
 
-    <android.support.v4.view.ViewPager
-        android:id="@+id/pager"
+    <android.support.design.widget.CoordinatorLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:fab="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"></android.support.v4.view.ViewPager>
+        android:layout_height="match_parent">
+
+        <android.support.v4.view.ViewPager
+            android:id="@+id/pager"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"></android.support.v4.view.ViewPager>
+
+        <com.melnykov.fab.FloatingActionButton
+            android:id="@+id/fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|right"
+            android:layout_margin="16dp"
+            android:src="@drawable/ic_add_circle_black_24dp"
+            fab:fab_colorNormal="@color/colorWhite"
+            android:descendantFocusability="blocksDescendants"/>
+    </android.support.design.widget.CoordinatorLayout>
 </LinearLayout>
