--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,9 @@
     <color name="colorBack">#4FC4F2</color>
     <color name="colorGray">#777C7E</color>
     <color name="colorWhite">#FFFFFF</color>
-
+    <color name="color1">#3164d7</color>
+    <color name="color2">#d92d29</color>
+    <color name="color3">#eeaa10</color>
+    <color name="color4">#3164d7</color>
+    <color name="color5">#2e9641</color>
 </resources>
