--- a/app/src/main/res/layout/fragment_login_tab1.xml
+++ b/app/src/main/res/layout/fragment_login_tab1.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:fab="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -14,11 +14,10 @@
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_anchor="@id/projectList"
-        app:layout_anchorGravity="bottom|right"
+        android:layout_gravity="bottom|right"
         android:layout_margin="16dp"
-        android:layout_marginBottom="100dp"
-        android:src="@drawable/add"
+        android:src="@drawable/ic_add_circle_black_24dp"
+        fab:fab_colorNormal="@color/colorWhite"
         android:descendantFocusability="blocksDescendants"/>
 
 </android.support.design.widget.CoordinatorLayout>
