--- a/app/src/main/res/layout/projectview_item.xml
+++ b/app/src/main/res/layout/projectview_item.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <com.daimajia.swipe.SwipeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="80dp"
     android:id="@+id/swipeLayout">
@@ -44,11 +45,33 @@
         android:orientation="vertical">
         <!--What you want to show in SurfaceView-->
 
+        <android.support.v7.widget.CardView
 
+            android:layout_width="match_parent"
+
+            android:layout_height="wrap_content"
+
+            android:layout_margin="@dimen/card_margin"
+
+            app:cardBackgroundColor="#00FFFFFF">
+
+
+
+        <LinearLayout
+
+            style="@style/Widget.CardContent"
+
+            android:layout_width="match_parent"
+
+            android:layout_height="wrap_content"
+
+            android:background="@drawable/cardview_border">
             <TextView
                 android:id="@+id/projectName"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
+
                 android:layout_height="wrap_content"
+                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                 android:layout_gravity="start"
                 android:layout_rowSpan="2"
                 android:layout_rowWeight="1"
@@ -60,12 +83,15 @@
 
             <TextView
                 android:id="@+id/createdTime"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="start"
                 android:layout_rowWeight="1"
                 android:textSize="10dp"
                 android:textColor="@color/colorGray" />
+
+        </LinearLayout>
+        </android.support.v7.widget.CardView>
 
     </LinearLayout>
     <!-- Surface View End -->
