로그인화면 로그인탭-프로젝트목록 프로젝트탭-회의방,문서목록,문서목록-문서내용,업무목록 ++++++++++++++++++++++++++++++++++++++++++++++++++++ 로그인탭-친구목록(친구목록 띄우기,액티비티-액티비티-프래그먼트 데이터 전달) ++++++++++++++++++++++++++++++++++++++++++++++++++++ 로그인탭-프로젝트목록 추가 진행해야 할 사항-php코드, 데이터베이스 쿼리 ++++++++++++++++++++++++++++++++++++++++++++++++++++ 로그인탭-프로젝트 추가, 친구 추가 데이터베이스 연동 진행해야 할 사항-프로젝트 삭제, 수정 버튼 이벤트 ++++++++++++++++++++++++++++++++++++++++++++++++++++ 스플래시,로그인화면UI변경,ID/PASSWORD찾기 진행해야 할 사항-MYSQL한글 깨짐 현상 해결, 일정부분 연결 ++++++++++++++++++++++++++++++++++++++++++++++++++++ 프로젝트 삭제, 수정 버튼 기능 진행해야 할 사항-MYSQL 한글 깨짐 현상 해결, 일정부분 연결 ++++++++++++++++++++++++++++++++++++++++++++++++++++ 프로젝트 탭2- 문서수정기능 진행해야 할 사항-MYSQL 한글 깨짐 현상 해결, 일정부분 연결 ++++++++++++++++++++++++++++++++++++++++++++++++++++ 일정부분 UI 진행해야 할 사항-MYSQL 한글 깨짐 현상 해결, 일정부분 연결 ++++++++++++++++++++++++++++++++++++++++++++++++++++ 로그인 수정 ++++++++++++++++++++++++++++++++++++++++++++++++++++ UI-1 ++++++++++++++++++++++++++++++++++++++++++++++++++++ 탭레이아웃수정전 ++++++++++++++++++++++++++++++++++++++++++++++++++++ 탭레이아웃수정

--- a/app/src/main/res/layout/activity_projecttab.xml
+++ b/app/src/main/res/layout/activity_projecttab.xml
@@ -7,13 +7,13 @@
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         style="@style/Base.Theme.HMKCodeApp"/>
 
     <android.support.design.widget.TabLayout
         android:id="@+id/tabLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"></android.support.design.widget.TabLayout>
+        android:layout_height="wrap_content" />
 
     <android.support.design.widget.CoordinatorLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
