--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,8 @@
             android:id="@+id/appbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fitsSystemWindows="true">
+            android:fitsSystemWindows="true"
+            android:visibility="gone">
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar2"
@@ -27,7 +28,12 @@
                 android:layout_height="?attr/actionBarSize"
                 android:background="@color/colorLogo"
                 app:itemIconTint="@color/colorWhite"
-                app:layout_scrollFlags="scroll|enterAlways"/>
+                app:layout_scrollFlags="scroll|enterAlways"
+                />
+
+
+
+
 
 
         </android.support.design.widget.AppBarLayout>
@@ -48,7 +54,7 @@
             <FrameLayout
                 android:id="@+id/frame"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:layout_height="match_parent" />
 
 
 
