--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -9,16 +9,13 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text = "회원가입화면"
+        android:text = "회원가입"
         android:textSize="20dp"
         android:textStyle="bold"
-        android:background="#8BCFCC"
+        android:background="#57a5c9"
         android:padding = "10dp"
         android:layout_marginBottom="30dp"/>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="220dp"></LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -74,8 +71,14 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="15dp"
         android:ems="10"
-        android:hint="password 재입력"
+        android:hint="password 확인"
         android:inputType="textPassword" />
+    <TextView
+        android:id="@+id/passwordcheck"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="20dp"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
