--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -75,4 +75,14 @@
         app:itemTextColor="@color/colorLogo"
         app:itemIconTint="@color/colorLogo"
         app:menu="@menu/navigationdraweritems" />
+
+    <com.melnykov.fab.FloatingActionButton
+        android:id="@+id/fabb"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|right"
+        android:layout_margin="16dp"
+        android:src="@drawable/add"
+        android:descendantFocusability="blocksDescendants"/>
+
 </android.support.v4.widget.DrawerLayout>
