--- a/app/src/main/res/layout/activity_find_pw.xml
+++ b/app/src/main/res/layout/activity_find_pw.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:layout_gravity="center"
     android:gravity="center"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/colorLogo">
 
     <ImageView
-        android:layout_width="300dp"
-        android:layout_height="200dp"
+        android:layout_width="220dp"
+        android:layout_height="150dp"
         android:gravity="center"
-        android:src="@drawable/logohue" />
+        android:src="@drawable/hue" />
 
     <GridLayout
         android:rowCount="2"
@@ -18,17 +19,21 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_margin="10dp">
+        android:layout_margin="20dp">
 
 
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="ID"/>
+            android:layout_gravity="center"
+            android:text="ID"
+            android:textAlignment="center"
+            android:textStyle="bold"/>
 
         <EditText
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:maxLines="1"
@@ -39,10 +44,14 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="Email"/>
+            android:layout_gravity="center"
+            android:text="Email"
+            android:textAlignment="center"
+            android:textStyle="bold"/>
 
         <EditText
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:maxLines="1"
@@ -57,8 +66,10 @@
         android:layout_height="wrap_content"
         android:id="@+id/findInputPw"
         android:text="찾기"
-        android:textColor="@color/colorWhite"
-        android:background="@color/colorLogo"/>
+        android:textColor="@color/colorLogo"
+        android:background="@drawable/button_border"
+        android:textAlignment="center"
+        android:textStyle="bold"/>
 
 
 </LinearLayout>
