--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,29 +4,26 @@
     android:layout_height="match_parent"
     android:rowCount="3"
     android:columnCount="1"
-    android:background="@color/colorWhite">
+    android:background="@color/colorLogo">
 
     <GridLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:gravity="center">
+        android:layout_height="wrap_content">
 
         <ImageView
-            android:layout_width="300dp"
-            android:layout_height="200dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="50dp"
-            android:src="@drawable/logohue" />
+            android:layout_width="220dp"
+            android:layout_height="150dp"
+            android:layout_gravity="center_horizontal|bottom"
+            android:layout_marginTop="90dp"
+            android:src="@drawable/hue" />
 
 
     </GridLayout>
 
     <GridLayout
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_rowWeight="2"
         android:rowCount="2"
         android:columnCount="3"
         android:layout_gravity="center">
@@ -37,13 +34,15 @@
             android:text="ID"
             android:textAlignment="center"
             android:layout_columnWeight="1"
-            android:layout_gravity="center"/>
+            android:layout_gravity="center"
+            android:textStyle="bold"/>
 
 
         <EditText
             android:id="@+id/idText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:maxLines="1"
             android:layout_columnWeight="2"
             android:layout_gravity="center|fill_horizontal"
             android:inputType="text" />
@@ -52,12 +51,13 @@
             android:id="@+id/login"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@color/colorLogo"
-            android:textColor="@color/colorWhite"
+            android:background="@drawable/button_border"
+            android:textColor="@color/colorLogo"
             android:text="Login"
             android:layout_columnWeight="1"
             android:layout_rowSpan="2"
-            android:layout_gravity="center"/>
+            android:layout_gravity="center"
+            android:textStyle="bold"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -65,12 +65,14 @@
             android:text="PW"
             android:textAlignment="center"
             android:layout_columnWeight="1"
+            android:textStyle="bold"
             android:layout_gravity="center"/>
 
         <EditText
             android:id="@+id/passwordText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:maxLines="1"
             android:layout_columnWeight="2"
             android:layout_gravity="center|fill_horizontal"
             android:inputType="numberPassword" />
@@ -83,27 +85,29 @@
             android:columnCount="2"
             android:layout_gravity="top">
 
-            <Button
+            <TextView
                 android:id="@+id/find"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_columnWeight="1"
-                android:layout_gravity="top"
+                android:layout_gravity="center"
                 android:text="ID/PASSWORD찾기"
                 android:textAlignment="center"
-                android:textColor="@color/colorGray"
-                android:background="@color/colorWhite"/>
+                android:textStyle="bold"
+                android:background="@color/colorLogo"
+                android:elevation="0dp"/>
 
-            <Button
+            <TextView
                 android:id="@+id/register"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_columnWeight="1"
-                android:layout_gravity="top"
+                android:layout_gravity="center"
                 android:text="회원가입"
                 android:textAlignment="center"
-                android:textColor="@color/colorGray"
-                android:background="@color/colorWhite"/>
+                android:textStyle="bold"
+                android:background="@color/colorLogo"
+                android:elevation="0dp"/>
 
 
         </GridLayout>
@@ -149,21 +153,21 @@
         android:layout_rowWeight="1"
         android:rowCount="3"
         android:columnCount="1"
-        android:layout_gravity="center"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="50dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_rowWeight="1"
             android:orientation="horizontal"
             android:gravity="center">
 
             <View
                 android:layout_width="150dp"
                 android:layout_height="2dp"
-                android:background="@color/colorLogo"
+                android:background="@color/colorWhite"
                 android:layout_gravity="center" />
 
 
@@ -175,12 +179,12 @@
                 android:layout_margin="10dp"
                 android:text="OR"
                 android:textAlignment="center"
-                android:textColor="@color/colorLogo" />
+                android:textColor="@color/colorWhite" />
 
             <View
                 android:layout_width="150dp"
                 android:layout_height="2dp"
-                android:background="@color/colorLogo"
+                android:background="@color/colorWhite"
                 android:layout_gravity="center" />
 
 
@@ -200,11 +204,12 @@
         <!--android:textStyle="bold"/>-->
         <com.facebook.login.widget.LoginButton
             android:id="@+id/login_buttonF"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
+            android:layout_width="200dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center"
             android:layout_marginTop="30dp"
-            android:layout_marginBottom="30dp"/>
+            android:layout_marginBottom="30dp"
+            android:textAlignment="center"/>
 
         <!--<Button-->
         <!--android:layout_width="match_parent"-->
