--- a/app/src/main/res/layout/activity_newfriend.xml
+++ b/app/src/main/res/layout/activity_newfriend.xml
@@ -10,6 +10,7 @@
 
         <EditText
             android:id="@+id/friendId"
+            android:textColor="#000000"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="3"
