--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -5,18 +5,25 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/colorLogo"
+    android:gravity="center"
     tools:context="com.example.mijin.hue.RegisterActivity">
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text = "회원가입"
-        android:textSize="20dp"
-        android:textStyle="bold"
-        android:background="#57a5c9"
-        android:padding = "10dp"
-        android:layout_marginBottom="30dp"/>
+
+
+    <ImageView
+        android:layout_width="220dp"
+        android:layout_height="150dp"
+        android:gravity="center"
+        android:src="@drawable/hue" />
 
     <LinearLayout
+        android:layout_marginLeft="30dp"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+    <LinearLayout
+        android:layout_marginStart="15dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
@@ -27,8 +34,7 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:hint="ID"
-            android:inputType="textPersonName"
-            android:layout_marginStart="15dp" />
+            android:inputType="textPersonName" />
 
         <Button
             android:id="@+id/duplicationCheckButton"
@@ -36,7 +42,10 @@
             android:layout_height="40dp"
             android:layout_alignStart="@+id/idText"
             android:layout_marginStart="15dp"
-            android:text="ID중복체크" />
+            android:layout_marginEnd="15dp"
+            android:background="@drawable/button_border"
+            android:textColor="@color/colorLogo"
+            android:text="CHECK" />
     </LinearLayout>
 
     <EditText
@@ -54,7 +63,6 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:hint="name"
-        android:inputType="textPersonName"
         android:layout_marginStart="15dp"/>
 
     <EditText
@@ -80,6 +88,7 @@
         android:textSize="20dp"/>
 
     <LinearLayout
+        android:layout_marginLeft="30dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
@@ -89,6 +98,8 @@
             android:layout_height="wrap_content"
             android:layout_alignStart="@+id/idText"
             android:layout_marginStart="15dp"
+            android:background="@drawable/button_border"
+            android:textColor="@color/colorLogo"
             android:text="회원가입" />
 
         <Button
@@ -97,9 +108,11 @@
             android:layout_height="wrap_content"
             android:layout_alignStart="@+id/idText"
             android:layout_marginStart="15dp"
+            android:background="@drawable/button_border"
+            android:textColor="@color/colorLogo"
             android:text="취소" />
 
-
+    </LinearLayout>
     </LinearLayout>
 
 </LinearLayout>
