--- a/app/src/main/res/layout/fragment_project_tab1.xml
+++ b/app/src/main/res/layout/fragment_project_tab1.xml
@@ -56,7 +56,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_margin="5dp"
-        android:layout_marginHorizontal="20dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginLeft="10dp"
         android:background="@color/colorBack"
         android:layout_weight="1"
         android:text="회의 참여"
