--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,7 @@
     <color name="color3">#eeaa10</color>
     <color name="color4">#3164d7</color>
     <color name="color5">#2e9641</color>
+    <color name="colorLogoTransparent">#6657a5c9</color>
+    <color name="color22">#66d92d29</color>
+    <color name="color33">#66eeaa10</color>
 </resources>
