--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
     <!-- Base application theme.
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
@@ -17,9 +17,10 @@
         <item name="windowNoTitle">true</item>
     </style>
 
-    <style name="Theme.MyDialog" parent="Theme.AppCompat.DayNight.Dialog.Alert">
+    <style name="Theme.MyDialog" parent="Theme.AppCompat.Dialog.Alert">
         <item name="windowNoTitle">true</item>
         <item name="windowActionBar">false</item>
+        <item name="android:background">@drawable/dialog</item>
     </style>
 
 
@@ -93,4 +94,16 @@
     </style>
 
 
+
+    <style name="NumbePickerStyle">
+        <item name="android:textSize">20dp</item>
+        <item name="android:textColorPrimary">@color/colorLogo</item>
+        <item name="android:colorControlNormal" tools:targetApi="lollipop">@color/colorGray</item>
+    </style>
+
+
+    <style name="MyAlertDialog" parent="Theme.AppCompat.DayNight.Dialog.Alert">
+        <item name="android:background">@color/colorWhite</item>
+        <item name="android:textColor">@color/colorLogo</item>
+    </style>
 </resources>
