로그인화면         로그인탭-프로젝트목록         프로젝트탭-회의방,문서목록,문서목록-문서내용,업무목록         ++++++++++++++++++++++++++++++++++++++++++++++++++++         로그인탭-친구목록(친구목록 띄우기,액티비티-액티비티-프래그먼트 데이터 전달)         ++++++++++++++++++++++++++++++++++++++++++++++++++++         로그인탭-프로젝트목록 추가         진행해야 할 사항-php코드, 데이터베이스 쿼리         ++++++++++++++++++++++++++++++++++++++++++++++++++++         로그인탭-프로젝트 추가, 친구 추가 데이터베이스 연동         진행해야 할 사항-프로젝트 삭제, 수정 버튼 이벤트         ++++++++++++++++++++++++++++++++++++++++++++++++++++         스플래시,로그인화면UI변경,ID/PASSWORD찾기         진행해야 할 사항-MYSQL한글 깨짐 현상 해결, 일정부분 연결         ++++++++++++++++++++++++++++++++++++++++++++++++++++         프로젝트 삭제, 수정 버튼 기능         진행해야 할 사항-MYSQL 한글 깨짐 현상 해결, 일정부분 연결         ++++++++++++++++++++++++++++++++++++++++++++++++++++         프로젝트 탭2- 문서수정기능         진행해야 할 사항-MYSQL 한글 깨짐 현상 해결, 일정부분 연결         ++++++++++++++++++++++++++++++++++++++++++++++++++++         일정부분 UI         진행해야 할 사항-MYSQL 한글 깨짐 현상 해결, 일정부분 연결         ++++++++++++++++++++++++++++++++++++++++++++++++++++         로그인 수정         ++++++++++++++++++++++++++++++++++++++++++++++++++++         UI-1         ++++++++++++++++++++++++++++++++++++++++++++++++++++         탭레이아웃수정전         ++++++++++++++++++++++++++++++++++++++++++++++++++++         탭레이아웃수정
        일단 된것까지만
        ++++++++++++++++++++++++++++++++++++++++++++++++++++
        달력기간+알람기능

--- a/app/src/main/res/layout/activity_add_project_all.xml
+++ b/app/src/main/res/layout/activity_add_project_all.xml
@@ -10,7 +10,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:gravity="center">
+        android:gravity="center"
+        android:layout_weight="1">
         <biz.kasual.materialnumberpicker.MaterialNumberPicker
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
@@ -45,23 +46,14 @@
             app:npTextSize="25sp"
             android:id="@+id/startDay"/>
 
-        <biz.kasual.materialnumberpicker.MaterialNumberPicker
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            app:npMinValue="0"
-            app:npMaxValue="23"
-            app:npBackgroundColor="@color/colorWhite"
-            app:npSeparatorColor="#00000000"
-            app:npTextColor="@color/colorLogo"
-            app:npTextSize="25sp"
-            android:id="@+id/startHour"/>
 
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorLogo">
+        android:background="@color/colorLogo"
+        android:layout_weight="1">
 
         <TextView
             android:layout_width="wrap_content"
@@ -90,7 +82,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:gravity="center">
+        android:gravity="center"
+        android:layout_weight="1">
         <biz.kasual.materialnumberpicker.MaterialNumberPicker
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
@@ -123,22 +116,13 @@
             app:npTextSize="25sp"
             android:id="@+id/endDay"/>
 
-        <biz.kasual.materialnumberpicker.MaterialNumberPicker
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            app:npMinValue="0"
-            app:npMaxValue="23"
-            app:npBackgroundColor="@color/colorWhite"
-            app:npSeparatorColor="#00000000"
-            app:npTextColor="@color/colorLogo"
-            app:npTextSize="25sp"
-            android:id="@+id/endHour"/>
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorLogo">
+        android:background="@color/colorLogo"
+        android:layout_weight="1">
 
         <TextView
             android:layout_width="wrap_content"
@@ -169,7 +153,7 @@
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:visibility="gone">
+        android:layout_weight="1">
 
         <TextView
             android:layout_width="wrap_content"
@@ -196,46 +180,24 @@
 
     
 
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-
-            <EditText
-                android:id="@+id/friendId"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="3"
-                android:hint="친구 ID 검색"/>
-
-            <Button
-                android:id="@+id/search"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:padding="0dp"
-                android:text="검색"
-                android:background="@color/colorLogo"/>
-
-        </LinearLayout>
-
         <Button
+            android:id="@+id/addFriend"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/button_border"
+            android:layout_gravity="center"
             android:text="친구추가"
             android:textStyle="bold"
-            android:textAlignment="center"/>
+            android:textAlignment="center"
+            android:layout_weight="1"/>
 
         <ScrollView
+            android:id="@+id/scroll"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:fillViewport="true">
+            android:layout_height="wrap_content"
+            android:fillViewport="true"
+            android:visibility="gone"
+            android:layout_weight="1">
 
 
                 <ListView
@@ -247,7 +209,33 @@
 
         </ScrollView>
 
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1">
+
+            <Button
+                android:id="@+id/save2"
+                android:text="저장"
+                android:textAlignment="center"
+                android:textColor="@color/colorWhite"
+                android:background="@color/colorLogo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"/>
+
+            <Button
+                android:id="@+id/cancel2"
+                android:text="취소"
+                android:textAlignment="center"
+                android:textColor="@color/colorWhite"
+                android:background="@color/colorLogo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"/>
 
 
-    </LinearLayout>
+        </LinearLayout>
+
 </LinearLayout>
