--- a/app/src/main/res/layout/activity_setting_schedule2.xml
+++ b/app/src/main/res/layout/activity_setting_schedule2.xml
@@ -6,6 +6,15 @@
     android:layout_height="match_parent"
     android:background="@drawable/dialog">
 
+    <CheckBox
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end"
+        android:text="알림설정"
+        android:textColor="@color/colorLogo"
+        android:buttonTint="@color/colorLogo"
+        android:id="@+id/alarm"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
