--- a/app/src/main/res/layout/projectview_item.xml
+++ b/app/src/main/res/layout/projectview_item.xml
@@ -18,7 +18,7 @@
             android:layout_width="50dp"
             android:layout_height="match_parent"
             android:focusable="false"
-            android:background="@drawable/button_border"
+            android:background="@drawable/button_border_logo"
             android:text="수정"
             android:textStyle="bold"
             android:textColor="@color/colorWhite"/>
@@ -28,7 +28,7 @@
             android:layout_width="50dp"
             android:layout_height="match_parent"
             android:focusable="false"
-            android:background="@drawable/button_border"
+            android:background="@drawable/button_border_logo"
             android:text="삭제"
             android:textStyle="bold"
             android:textColor="@color/colorWhite"/>
