--- a/app/src/main/res/layout/workview_item.xml
+++ b/app/src/main/res/layout/workview_item.xml
@@ -17,7 +17,7 @@ android:id="@+id/swipeLayout">
         android:layout_width="50dp"
         android:layout_height="match_parent"
         android:focusable="false"
-        android:background="@drawable/button_border"
+        android:background="@drawable/button_border_logo"
         android:text="수정"
         android:textStyle="bold"
         android:textColor="@color/colorWhite"/>
@@ -27,7 +27,7 @@ android:id="@+id/swipeLayout">
         android:layout_width="50dp"
         android:layout_height="match_parent"
         android:focusable="false"
-        android:background="@drawable/button_border"
+        android:background="@drawable/button_border_logo"
         android:text="삭제"
         android:textStyle="bold"
         android:textColor="@color/colorWhite"/>
