--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,5 @@
     <color name="colorLogoTransparent">#6657a5c9</color>
     <color name="color22">#66d92d29</color>
     <color name="color33">#66eeaa10</color>
+    <color name="colorGrayTransparent">#66777C7E</color>
 </resources>
